# scrapling-web-fetch

./: .gitignore  AGENTS.md  SKILL.md  pyproject.toml  site-test.md
.trae/documents/: parser-refactor-plan.md  scrapling-native-parser-research.md  scrapling-parser-hybrid-plan.md  site-test-plan.md  site-test-skill-doc-update.md
.trae/skills/site-test/: SKILL.md
.trae/specs/refactor-content-parser/: baseline_test.json  checklist.md  spec.md  tasks.md  test_comparison.json
references/: usage.md
scripts/: scrapling_fetch.py  site_configs.py  site_test.py
scripts/fetcher/: __init__.py  scrapling_fetcher.py
scripts/format/: __init__.py  formatters.py
scripts/parsers/: __init__.py  base.py  manager.py  scrapling_parser.py  trafilatura_parser.py
