[project]
name = "scrapling-web-fetch-1-0-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-fingerprint-datapoints==0.11.0",
    "browserforge==1.2.4",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "click==8.3.1",
    "cssselect==1.4.0",
    "curl-cffi==0.14.0",
    "greenlet==3.3.2",
    "html2text==2025.4.15",
    "lxml==6.0.2",
    "msgspec>=0.20.0",
    "orjson==3.11.7",
    "patchright>=1.58.2",
    "playwright==1.58.0",
    "pycparser==3.0",
    "pyee==13.0.1",
    "scrapling==0.4.2",
    "tld==0.13.2",
    "typing-extensions==4.15.0",
    "w3lib==2.4.0",
]
