[project]
name = "scrapling-web-fetch-1-0-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.14.0",
    "msgspec>=0.20.0",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "scrapling>=0.4.2",
    "trafilatura>=2.0.0",
]
